plugins {
    id 'java-library'
    id 'maven-publish'
    id 'uk.gov.hmcts.java' version '0.12.70'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.springframework.boot' version '3.5.14'
    id 'org.owasp.dependencycheck' version '12.2.2'
    id 'com.github.ben-manes.versions' version '0.54.0'
    id 'se.patrikerdes.use-latest-versions' version '0.2.19'
    id 'au.com.dius.pact' version '4.7.1'
}

group = 'com.github.hmcts'
version = System.getenv('RELEASE_VERSION') ?: '0.0.1-SNAPSHOT'

def gitRepo = 'https://github.com/hmcts/service-auth-provider-java-client'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }

    withSourcesJar()
    withJavadocJar()
}

sourceSets {
    integrationTest {
        compileClasspath += sourceSets.main.output
        runtimeClasspath += sourceSets.main.output
    }

    contractTest {
        compileClasspath += sourceSets.main.output
        runtimeClasspath += sourceSets.main.output
    }
}

configurations {
    integrationTestImplementation.extendsFrom testImplementation
    integrationTestRuntimeOnly.extendsFrom testRuntimeOnly

    contractTestImplementation.extendsFrom testImplementation
    contractTestRuntimeOnly.extendsFrom testRuntimeOnly
}

repositories {
    mavenLocal()
    mavenCentral()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << '-parameters' << '-Xlint:deprecation'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

jar {
    enabled = true
    archiveClassifier = ''
    manifest {
        attributes(
                'Implementation-Title': project.name,
                'Implementation-Version': project.version
        )
    }
}

bootJar {
    enabled = false
}

tasks.register('integration', Test) {
    description = 'Runs the integration tests.'
    group = 'Verification'
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
}

tasks.register('contract', Test) {
    description = 'Runs the consumer Pact tests.'
    group = 'Verification'
    testClassesDirs = sourceSets.contractTest.output.classesDirs
    classpath = sourceSets.contractTest.runtimeClasspath
    systemProperty 'pact.rootDir', 'pacts'
}

tasks.named('check') {
    dependsOn tasks.named('integration')
    dependsOn tasks.named('contract')
}

tasks.register('runAndPublishConsumerPactTests') {
    description = 'Runs and publishes the consumer Pact tests.'
    group = 'Verification'
    dependsOn tasks.named('contract')
    finalizedBy tasks.named('pactPublish')
}

project.ext {
    pactVersion = getCheckedOutGitCommitHash()
}

pact {
    publish {
        pactDirectory = 'pacts'
        pactBrokerUrl = System.getenv('PACT_BROKER_FULL_URL') ?: 'http://localhost:80'
        tags = [System.getenv('PACT_BRANCH_NAME') ?: 'Dev']
    }
}

publishing {
    publications {
        Main(MavenPublication) {
            from components.java
            artifactId = 'service-auth-provider-java-client'

            pom {
                name = 'Service auth provider API client'
                description = 'IDAM service auth provider API'
                url = gitRepo

                licenses {
                    license {
                        name = 'MIT License, Copyright (c) 2023 HM Courts & Tribunals Service'
                        url = 'https://www.opensource.org/licenses/MIT'
                    }
                }

                scm {
                    url = gitRepo
                }
            }
        }
    }

    repositories {
        maven {
            name = 'AzureArtifacts'
            url = uri('https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1')
            credentials {
                username = System.getenv('AZURE_DEVOPS_ARTIFACT_USERNAME')
                password = System.getenv('AZURE_DEVOPS_ARTIFACT_TOKEN')
            }
        }
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.3.2'
    implementation 'io.github.openfeign:feign-jackson:13.12'
    implementation 'com.warrenstrange:googleauth:1.5.0'
    implementation 'com.auth0:java-jwt:4.5.2'
    implementation 'jakarta.servlet:jakarta.servlet-api:6.1.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    integrationTestImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock:4.3.3'

    contractTestImplementation 'au.com.dius.pact.consumer:junit5:4.7.1'
}

dependencyCheck {
    failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
    suppressionFile = 'config/owasp/suppressions.xml'
}

dependencyUpdates {
    def isNonStable = { String version ->
        def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier ->
            version.toUpperCase().contains(qualifier)
        }
        def regex = /^[0-9,.v-]+$/

        !stableKeyword && !(version ==~ regex)
    }

    rejectVersionIf { selection ->
        isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
    }
}

def getCheckedOutGitCommitHash() {
    'git rev-parse --verify --short HEAD'.execute().text.trim()
}
